--- a/app/src/main/res/layout-land/camview.xml
+++ b/app/src/main/res/layout-land/camview.xml
@@ -36,12 +36,32 @@ android:layout_height="match_parent">
     android:background="#4285f4"
     android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/picture"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/picture" />
+        android:layout_gravity="center|top"
+
+        android:orientation="vertical"
+        android:weightSum="2">
+
+
+        <Button
+            android:id="@+id/picture"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="@string/picture" />
+
+        <Button
+            android:id="@+id/video"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="@string/video" />
+
+    </LinearLayout>
 
     <ImageButton
         android:id="@+id/info"
