--- a/app/src/main/res/layout/camview.xml
+++ b/app/src/main/res/layout/camview.xml
@@ -17,20 +17,35 @@
         android:layout_below="@id/autofit_view"
         android:background="#4285f4">
 
-        <Button
-            android:id="@+id/picture"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:layout_gravity="center"
-            android:text="@string/picture" />
+            android:weightSum="2">
 
+            <Button
+                android:id="@+id/picture"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/picture"
+                android:layout_weight="1"/>
+
+            <Button
+                android:id="@+id/video"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/video"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
         <ImageButton
             android:id="@+id/info"
             android:contentDescription="@string/description_info"
             style="@android:style/Widget.Material.Light.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|end"
+            android:layout_gravity="bottom|end"
             android:padding="20dp"
             android:src="@drawable/ic_action_info" />
 
