--- a/app/src/main/res/layout-land/camview.xml
+++ b/app/src/main/res/layout-land/camview.xml
@@ -42,7 +42,7 @@ android:layout_height="match_parent">
         android:layout_gravity="center|top"
 
         android:orientation="vertical"
-        android:weightSum="2">
+        android:weightSum="3">
 
 
         <Button
@@ -60,6 +60,13 @@ android:layout_height="match_parent">
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="@string/video" />
+
+        <Button
+            android:id="@+id/settings"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:text="@string/settings"
+            android:layout_weight="1"/>
 
     </LinearLayout>
 
