--- a/app/src/main/res/layout/camview.xml
+++ b/app/src/main/res/layout/camview.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center"
-            android:weightSum="2">
+            android:weightSum="3">
 
             <Button
                 android:id="@+id/picture"
@@ -36,6 +36,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/video"
+                android:layout_weight="1"/>
+
+            <Button
+                android:id="@+id/settings"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/settings"
                 android:layout_weight="1"/>
 
         </LinearLayout>
