--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,32 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000"
-    tools:context="com.gc.triprec.MainActivity" />
+    tools:context="com.gc.triprec.MainActivity">
+
+    <com.otaliastudios.cameraview.CameraView
+        android:id="@+id/camera"
+        android:keepScreenOn="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cameraGesturePinch="zoom"
+        app:cameraGestureTap="focusWithMarker"
+        app:cameraGestureLongTap="capture"
+        app:cameraFacing="back"
+        app:cameraFlash="off"
+        app:cameraGrid="draw4x4"
+        app:cameraCropOutput="false"
+        app:cameraJpegQuality="100"
+        app:cameraVideoQuality="max1080p"
+        app:cameraWhiteBalance="auto"
+        app:cameraHdr="off"
+        app:cameraAudio="on"
+        app:cameraPlaySounds="true"/>
+
+</RelativeLayout>
