--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -24,8 +24,9 @@
     <com.otaliastudios.cameraview.CameraView
         android:id="@+id/camera"
         android:keepScreenOn="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
 
@@ -43,52 +44,59 @@
         app:cameraHdr="off"
         app:cameraAudio="on"
         app:cameraPlaySounds="true"/>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/autofit_view"
-        android:background="#4285f4">
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_below="@id/camera"
+        android:layout_toEndOf="@id/camera"
+        android:background="#4285f4"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center"
+            android:layout_gravity="center|top"
+            android:orientation="vertical"
             android:weightSum="3">
 
             <Button
                 android:id="@+id/picture"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/picture"
-                android:layout_weight="1"/>
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="@string/picture" />
 
             <Button
                 android:id="@+id/video"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/video"
-                android:layout_weight="1"/>
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="@string/video" />
 
             <Button
                 android:id="@+id/settings"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
                 android:text="@string/settings"
                 android:layout_weight="1"/>
-
         </LinearLayout>
+
         <ImageButton
             android:id="@+id/info"
-            android:contentDescription="@string/description_info"
             style="@android:style/Widget.Material.Light.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
+            android:layout_gravity="center_horizontal|bottom"
+            android:contentDescription="@string/description_info"
             android:padding="20dp"
             android:src="@drawable/ic_action_info" />
 
     </FrameLayout>
+
 </RelativeLayout>
