--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -61,7 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center|top"
             android:orientation="vertical"
-            android:weightSum="3">
+            android:weightSum="4">
 
             <Button
                 android:id="@+id/picture"
@@ -69,22 +69,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="@string/picture" />
+                android:text="@string/picture"
+                android:textSize="12sp"/>
 
             <Button
                 android:id="@+id/video"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="@string/video" />
+                android:text="@string/video"
+                android:textSize="12sp"
+                android:layout_weight="1" />
 
             <Button
-                android:id="@+id/settings"
+                android:id="@+id/playback"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:text="@string/settings"
+                android:text="@string/playlist"
+                android:textSize="12sp"
                 android:layout_weight="1"/>
+
         </LinearLayout>
 
         <ImageButton
