--- a/app/src/main/res/layout/activity_playback_video.xml
+++ b/app/src/main/res/layout/activity_playback_video.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gc.triprec.PlaybackVideoActivity">
-
-</android.support.constraint.ConstraintLayout>
+    android:layout_gravity="center">
+    <com.gc.triprec.PlaybackVideoView android:id="@+id/video_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</LinearLayout>
