add video file max count set

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -18,4 +18,13 @@
         android:positiveButtonText="@null"
         android:title="@string/pref_title_recordtime" />
 
+    <ListPreference
+        android:defaultValue="100"
+        android:entries="@array/pref_max_videofile_list_title"
+        android:entryValues="@array/pref_max_videofile_list_value"
+        android:key="@string/key_max_videofiles"
+        android:negativeButtonText="@null"
+        android:positiveButtonText="@null"
+        android:title="@string/pref_title_max_videofile_count" />
+
 </PreferenceScreen>
