--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -58,48 +58,48 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center|top"
             android:orientation="vertical"
-            android:weightSum="4">
+            android:weightSum="2">
 
-            <Button
+            <ImageButton
                 android:id="@+id/picture"
                 android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="@string/picture"
-                android:textSize="12sp"/>
+                android:background="@drawable/background"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                app:srcCompat="@drawable/ic_camera_enhance_black_24dp" />
 
-            <Button
-                android:id="@+id/video"
+            <Space
                 android:layout_gravity="center"
-                android:layout_width="wrap_content"
+                android:layout_width="1dp"
                 android:layout_height="0dp"
-                android:text="@string/video"
-                android:textSize="12sp"
                 android:layout_weight="1" />
 
-            <Button
-                android:id="@+id/playback"
-                android:layout_width="wrap_content"
+            <ImageButton
+                android:id="@+id/video"
+                android:layout_gravity="center"
+                android:background="@drawable/background"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                app:srcCompat="@drawable/ic_videocam_black_24dp" />
+
+            <Space
+                android:layout_gravity="center"
+                android:layout_width="1dp"
                 android:layout_height="0dp"
-                android:text="@string/playlist"
-                android:textSize="12sp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
+
+            <ImageButton
+                android:id="@+id/playback"
+                android:layout_gravity="center"
+                android:background="@drawable/background"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                app:srcCompat="@drawable/ic_folder_black_24dp" />
 
         </LinearLayout>
-
-        <ImageButton
-            android:id="@+id/info"
-            style="@android:style/Widget.Material.Light.Button.Borderless"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|bottom"
-            android:contentDescription="@string/description_info"
-            android:padding="20dp"
-            android:src="@drawable/ic_action_info" />
 
     </FrameLayout>
 
