--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -52,46 +53,48 @@
         android:background="#4285f4">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center"
-            android:weightSum="3">
+            android:padding="16dp"
+            android:weightSum="2">
 
-            <Button
+            <ImageButton
                 android:id="@+id/picture"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/picture"
-                android:textSize="12sp"
-                android:layout_weight="1"/>
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:background="@drawable/background"
+                app:srcCompat="@drawable/ic_camera_enhance_black_24dp"
+                tools:ignore="MissingPrefix" />
 
-            <Button
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1" />
+
+            <ImageButton
                 android:id="@+id/video"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/video"
-                android:textSize="12sp"
-                android:layout_weight="1"/>
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:background="@drawable/background"
+                app:srcCompat="@drawable/ic_videocam_black_24dp"
+                tools:ignore="MissingPrefix" />
 
-            <Button
-                android:id="@+id/playback"
+            <Space
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:text="@string/playlist"
-                android:layout_weight="1"/>
+                android:layout_height="1dp"
+                android:layout_weight="1" />
+
+            <ImageButton
+                android:id="@+id/playback"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:background="@drawable/background"
+                app:srcCompat="@drawable/ic_folder_black_24dp"
+                tools:ignore="MissingPrefix"/>
 
         </LinearLayout>
-        <ImageButton
-            android:id="@+id/info"
-            android:contentDescription="@string/description_info"
-            style="@android:style/Widget.Material.Light.Button.Borderless"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:padding="20dp"
-            android:src="@drawable/ic_action_info" />
 
     </FrameLayout>
 </RelativeLayout>
