--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -6,6 +6,12 @@
         android:summary="@string/pref_description_record_enable"
         android:title="@string/pref_title_record_enable" />
 
+    <SwitchPreference
+        android:defaultValue="true"
+        android:key="@string/key_override_en"
+        android:summary="@string/pref_description_override_enable"
+        android:title="@string/pref_title_override_enable" />
+
     <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
          dismiss it. -->
     <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
