--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -18,7 +18,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000"
+    android:background="@android:color/black"
     tools:context="com.gc.triprec.MainActivity">
 
     <com.otaliastudios.cameraview.CameraView
@@ -53,7 +53,7 @@
         android:layout_alignParentTop="true"
         android:layout_below="@id/camera"
         android:layout_toEndOf="@id/camera"
-        android:background="#4285f4"
+        android:background="@android:color/transparent"
         android:orientation="horizontal">
 
         <LinearLayout
