--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_below="@id/autofit_view"
-        android:background="#4285f4">
+        android:background="@android:color/transparent">
 
         <LinearLayout
             android:layout_width="match_parent"
